# Raki

./: .gitignore  .memory.md  AGENT.md  AGENTS.md  CONTEXT.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: eval.yml
.husky/: pre-commit
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/automator/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
docs/: ROADMAP.md
docs/adr/: 0000-template.md  0001-provider-agnostic-ai.md  0002-single-device-sync-ready-data-model.md  0003-sqlite-vec-single-file-vectors.md  0004-prosemirror-json-canonical-note-format.md  0005-local-first-data-vs-egress-policy.md  0005-retrieval-quality-measured.md  0006-retrieval-staged-recall-rerank.md  0007-retrieval-quality-is-measurement-gated.md  0008-reranker-attached-attach-to-validate.md  0009-memory-lifecycle-ranking-signals.md  README.md
docs/eval/: baseline.md  chunking-baseline.md  chunking-real-notes-summary.md  judge-log.md  labeling-rubric.md  memory-corpus-DATA_PROVENANCE.md  r4-memory-baseline.json  real-data-baseline.md  real-data-protocol.md  reranker-deletion-criteria.md  scifact-baseline.md  snapshot.json
docs/raki/reviews/: 2026-06-13-tiptap-block-ids-spec-review.md
docs/superpowers/plans/: 2026-06-04-foundation-skeleton.md  2026-06-04-keyword-retrieval-fts5.md  2026-06-04-vector-mechanism-1a.md  2026-06-05-eval-harness-1b.md  2026-06-05-eval-protocol-hardening-3a-i.md  2026-06-05-eval-protocol-hardening-3a-ii.md  2026-06-05-hybrid-fusion-2.md  2026-06-06-adversarial-retrieval-regression-3b.md  2026-06-06-chunking-eval-substrate.md  2026-06-06-cross-encoder-reranker-4.md  2026-06-06-real-data-eval-substrate.md  2026-06-07-egress-context-substrate.md  2026-06-07-slice2a-grounded-qa-core.md  2026-06-07-slice2b-grounded-qa-app.md  2026-06-08-r0-scifact-benchmark-tier.md  2026-06-08-r1-reranker-attach.md  2026-06-08-slice3-note-body-editor.md  2026-06-10-p1-privacy-data-ownership.md  2026-06-10-r2-chunking-baseline-record.md  2026-06-10-r2-chunking-production-migration.md  2026-06-11-r3-query-understanding.md  2026-06-12-r4-memory-lifecycle-signals.md  2026-06-13-move-qa-orchestration-to-raki-memory.md  2026-06-13-tiptap-block-ids.md
docs/superpowers/specs/: 2026-06-04-vector-retrieval-eval-design.md  2026-06-05-eval-corpus-realism-design.md  2026-06-05-eval-protocol-hardening-3a-design.md  2026-06-06-adversarial-retrieval-regression-3b-design.md  2026-06-06-chunking-eval-substrate-design.md  2026-06-06-cross-encoder-reranker-4-design.md  2026-06-06-real-data-eval-substrate-design.md  2026-06-06-scifact-measurement-tier-design.md  2026-06-07-egress-context-substrate-design.md  2026-06-07-slice2-grounded-cloud-qa-design.md  2026-06-08-r0-scifact-benchmark-tier-design.md  2026-06-08-r1-reranker-attach-design.md  2026-06-08-slice3-note-body-editor-design.md  2026-06-10-r2-chunking-baseline-record-design.md  2026-06-10-r2-chunking-production-migration-design.md  2026-06-10-r3-query-understanding-design.md  2026-06-10-r4-memory-lifecycle-signals-design.md  2026-06-13-tiptap-block-ids-design.md
src/: index.tsx
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/crates/raki-ai/: Cargo.toml
src-tauri/crates/raki-ai/src/: egress.rs  fake.rs  fake_rerank.rs  fastembed.rs  lib.rs  messages.rs  query_rewrite.rs  rerank.rs  testing.rs
src-tauri/crates/raki-domain/: Cargo.toml
src-tauri/crates/raki-domain/src/: answer.rs  body.rs  clock.rs  egress.rs  error.rs  groundedness.rs  ids.rs  lib.rs  note.rs  ports.rs  query.rs  testing.rs
src-tauri/crates/raki-eval/: .gitignore  Cargo.toml
src-tauri/crates/raki-eval/fixtures/: corpus.json  queries.json
src-tauri/crates/raki-eval/fixtures/chunking/: corpus.json  queries.json
src-tauri/crates/raki-eval/src/: benchmark.rs  chunk.rs  chunk_baseline.rs  lib.rs  local_corpus.rs  main.rs  markdown.rs  realmetrics.rs
src-tauri/crates/raki-eval/src/memory_corpus/: baseline.rs  index.rs  measure.rs  mod.rs  seed.rs
src-tauri/crates/raki-eval/tests/: benchmark_gate.rs  eval_gate.rs
src-tauri/crates/raki-eval/tests/fixtures/local/: queries.json
src-tauri/crates/raki-eval/tests/fixtures/local/notes/: alpha.md  beta.md
src-tauri/crates/raki-generate/: Cargo.toml
src-tauri/crates/raki-generate/src/: groundedness.rs  lib.rs
src-tauri/crates/raki-memory/: Cargo.toml
src-tauri/crates/raki-memory/src/: answer.rs  chunk.rs  context.rs  indexing.rs  lib.rs  signals.rs
src-tauri/crates/raki-retrieval/: Cargo.toml
src-tauri/crates/raki-retrieval/src/: fusion.rs  lib.rs  metrics.rs  rerank.rs  search.rs
src-tauri/crates/raki-storage/: Cargo.toml
src-tauri/crates/raki-storage/src/: db.rs  egress.rs  hash.rs  indexing.rs  lib.rs  migrations.rs  notes.rs  search.rs  signals.rs  vectors.rs
src-tauri/src/: dto.rs  error.rs  indexing.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  notes.rs  qa.rs  settings.rs  signals.rs
src-tauri/tests/: p1_integration.rs
src/app/: App.tsx  Layout.tsx  Router.tsx
src/app/providers/: ThemeProvider.tsx
src/modules/notes/: NotesView.test.tsx  NotesView.tsx  api.test.ts  api.ts  hooks.ts
src/modules/notes/components/: BlockId.ts  NoteCreateForm.tsx  NoteEditor.tsx  NoteList.tsx  TipTapEditor.css  TipTapEditor.tsx
src/modules/notes/routes/: NotesRoute.tsx
src/modules/qa/: AskBox.test.tsx  AskBox.tsx  api.test.ts  api.ts  types.ts
src/modules/settings/: SettingsPanel.tsx  api.ts
src/shared/hooks/: useDebounce.ts
src/shared/ipc/: index.test.ts  index.ts
src/shared/lib/: cn.ts  cva.ts
src/shared/styles/: index.css
src/shared/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Markdown.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  Textarea.tsx  Toast.tsx  Tooltip.tsx  index.ts
(+25 files in other folders)
