[package]
name = "raki"
version = "0.1.0"
description = "Raki — a local-first, AI-native second brain"
authors = ["Raki"]
edition = "2021"

[lib]
name = "raki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
thiserror = "2.0"
uuid = { version = "1.23", features = ["v7", "serde"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync"] }
rusqlite = { version = "0.35", features = ["bundled"] }  # 0.40 pulls libsqlite3-sys using unstable `cfg_select`; broken on stable Rust 1.93
ts-rs = "12.0"
tracing = "0.1"
raki-domain = { path = "crates/raki-domain" }
raki-storage = { path = "crates/raki-storage" }
raki-retrieval = { path = "crates/raki-retrieval" }
raki-ai = { path = "crates/raki-ai" }
raki-memory = { path = "crates/raki-memory" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
async-trait = { workspace = true }
raki-domain = { workspace = true }
raki-storage = { workspace = true }
raki-retrieval = { workspace = true }
raki-ai = { workspace = true }
raki-memory = { workspace = true }
tokio = { workspace = true }
