[package]
name = "raki-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
raki-domain = { workspace = true }
async-trait = { workspace = true }
fastembed = "5.15"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
lru = "0.12"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
