[package]
name = "raki-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "raki_eval"

[[bin]]
name = "eval-report"
path = "src/main.rs"

[dependencies]
raki-domain = { workspace = true }
raki-storage = { workspace = true }
raki-ai = { workspace = true }
raki-retrieval = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
