[package]
name = "raki-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "raki_eval"

[[bin]]
name = "eval-report"
path = "src/main.rs"

[[bin]]
name = "real-eval"
path = "src/bin/real-eval.rs"

[[bin]]
name = "chunk-eval"
path = "src/bin/chunk-eval.rs"

[dependencies]
raki-domain = { workspace = true }
raki-storage = { workspace = true }
raki-ai = { workspace = true }
raki-retrieval = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
