[package]
name = "raki-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "raki_eval"

[[bin]]
name = "eval-report"
path = "src/main.rs"

[[bin]]
name = "real-eval"
path = "src/bin/real-eval.rs"

[[bin]]
name = "chunk-eval"
path = "src/bin/chunk-eval.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "bench-smoke"
path = "src/bin/bench-smoke.rs"

[[bin]]
name = "record_memory_baseline"
path = "src/bin/record_memory_baseline.rs"

[dependencies]
raki-domain = { workspace = true }
raki-storage = { workspace = true }
raki-ai = { workspace = true }
raki-retrieval = { workspace = true }
raki-memory = { workspace = true }
pulldown-cmark = { version = "0.12", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
ureq = "3.3.0"
zip = "8.6.0"
