[package]
name = "raki-generate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
raki-domain = { workspace = true }
raki-retrieval = { workspace = true }
raki-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
raki-ai = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
