[package]
name = "raki-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
raki-domain = { workspace = true }
raki-retrieval = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
raki-ai = { workspace = true }
tokio = { workspace = true }
