[package]
name = "raki-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
raki-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = "=0.1.10-alpha.4"
tokio = { workspace = true }
unicode-normalization = "0.1"
